# logic1

./: .gitignore  LICENSE  Makefile  README.md  atomic.py  containers.py  cython-setup.py  cython.yaml  environment.yaml  formula.py  logic1.py  logic1_dev.yaml  logic1_dev_3_11.yaml  logic1_dev_new.yaml  logic1_minimal.yaml  mypy.ini  pyproject.toml  pytest.ini  renaming.py  setup.py
.github/workflows/: conda.yaml  doc.yaml  docs.yaml  pypi.yaml
conda/: recipe.yaml
doc/: Makefile
doc/source/: conf.py  genindex.rst  index.rst  logic1.rst  py-modindex.rst  references.rst
doc/source/_static/: custom.css
doc/source/api/: abc.rst  atomlib.rst  firstorder.rst  index.rst  support.rst  theories.rst
doc/source/api/abc/: bnf.rst  index.rst  qe.rst  simplify.rst
doc/source/api/firstorder/: atomic.rst  firstorder.rst  formula.rst  index.rst
doc/source/api/support/: excepthook.rst  exceptionhook.rst  index.rst  logging.rst
doc/source/api/theories/: index.rst
doc/source/api/theories/RCF/: atomic.rst  bnf.rst  index.rst  qe.rst  rcf.rst  simplify.rst
doc/source/api/theories/Sets/: atomic.rst  bnf.rst  index.rst  qe.rst  sets.rst  simplify.rst
doc/source/manual/: formulas.rst  index.rst  methods.rst  sets.rst  theories.rst
logic1/: __init__.py
logic1/abc/: __init__.py  bnf.py  parser.py  pnf.py  qe.py  simplify.py
logic1/atomic/: __init__.py  atomic.py
logic1/atomlib/: __init__.py  atomic.py  generic.py  sympy.py
logic1/depricated/: __init__.py  qe.py
logic1/firstorder/: __init__.py  atomic.py  boolean.py  formula.py  interactive.py  pnf.py  quantified.py  truth.py
logic1/formulas/: __init__.py  formula.py  term.py
logic1/interactive/: RCF.py
logic1/support/: __init__.py  containers.py  decorators.py  excepthook.py  logging.py  renaming.py  tracing.py
logic1/theories/: __init__.py  sets.py  zmod.py
logic1/theories/RCF/: __init__.py  atomic.py  bnf.py  interactive.py  parser.py  pnf.py  qe.py  range.pyx  rcf.py  redlog.py  simplify.py  substitution.py  substitution.pyx  test_bnf.txt  test_firstorder.txt  test_geometry.txt  test_pnf.txt  test_qe.txt  test_qe_parallel.txt  test_rcf.txt  test_redlog.txt  test_regressions.txt  test_relations.txt  test_simplify.txt  test_simplify_motor.txt  test_simplify_motor_redlog.txt  test_sorting.txt  typing.py
logic1/theories/Sets/: __init__.py  atomic.py  bnf.py  pnf.py  qe.py  sets.py  simplify.py  test_bnf.txt  test_firstorder.txt  test_pnf.txt  test_qe.txt  test_simplify.txt  typing.py
logic1/theories/ZModM/: __init__.py  atomic.py  bnf.py  pnf.py  qe.py  test_bnf.txt  test_pnf.txt  test_qe.txt  zmodm.py
logic1/theories/depricated/RCF/: rcf.py  simplify.py  test_simplify.txt
stubs/gmpy2/: __init__.pyi
stubs/sage/: all.pyi
stubs/sage/misc/: all.pyi  functional.pyi  latex.pyi
stubs/sage/rings/: all.pyi  infinity.pyi  integer.pyi  integer_ring.pyi  rational.pyi  rational_field.pyi  ring.pyi
stubs/sage/rings/polynomial/: all.pyi  multi_polynomial_libsingular.pyi  multi_polynomial_ring_base.pyi  polynomial_element.pyi  polynomial_ring_constructor.pyi  term_order.pyi
stubs/sage/structure/: factorization.pyi
