[project]
name = "logic1"
dynamic = ["version"] # See https://setuptools-scm.readthedocs.io/en/v8.1.0/usage/
description = "Interpreted first-order logic in Python"
authors = [
  {name = "Nicolas Faroß", email = "faross@math.uni-sb.de"},
  {name = "Thomas Sturm", email = "tsturm@me.com"}
]
maintainers = [
  {name = "Nicolas Faroß", email = "faross@math.uni-sb.de"},
  {name = "Thomas Sturm", email = "tsturm@me.com"}
]
readme = "README.md"
dependencies = [
  "more-itertools",
  "pyeda",
]
requires-python = ">=3.11,<3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["logic1*"]

[tool.setuptools_scm]
